--- a/main_preamble.html
+++ b/main_preamble.html
@@ -5,8 +5,8 @@
 <div class="admonition warning">
 <p class="admonition-title">Unreleased content!</p>
 You are viewing a build based on the latest commit on the <code>main</code>
-branch. This means that the content of this site is subject to change. Some
-features can behave differently in your production deployment than described
+branch. This means that the content of this site is subject to change. In your
+productin deployment, some features may behave differently than described
 here.
 
 <br/>Please visit <a href="/latest">/latest</a> for the latest released
