--- a/main_preamble.html
+++ b/main_preamble.html
@@ -3,13 +3,13 @@
 {% block announce %}
 
 <div class="admonition warning">
-<p class="admonition-title">Unreleased content!</p>
+<p class="admonition-title">Unreleased Content!</p>
 You are viewing a build based on the latest commit on the <code>main</code>
 branch. This means that the content of this site is subject to change. In your
 production deployment, some features may behave differently than described
 here.
 
-<br/>Please visit <a href="/latest">/latest</a> for the latest released
-documentation.
+<br/>For the latest released documentation, please visit
+<a href="/latest">/latest</a>.
 </div>
 {% endblock %}
